Fix double scroll on page change

--- a/public/assets/css/manager/layout/_content.css
+++ b/public/assets/css/manager/layout/_content.css
@@ -12,7 +12,7 @@
 
 .page-content {
   margin: 0;
-  overflow-x: hidden;
+  overflow: hidden;
   padding-left: 210px;
 
   -webkit-transition: all .25s;
